# sylar-from-suycx

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  rpc.cfg
cmake/: readme.md
docs/diagrams/: allclass.drawio  rpc.drawio
docs/suycx/: README.md
include/: fdmanager.h  fiber.h  hook.h  iomanager.h  logger.h  mutex.h  noncopyable.h  scheduler.h  singleton.h  thread.h  timer.h  timestamp.h  util.h
include/src/: CMakeLists.txt  fdmanager.cc  fiber.cc  hook.cc  iomanager.cc  logger.cc  mutex.cc  scheduler.cc  thread.cc  timer.cc  timestamp.cc  util.cc
lib/: readme.md
sylar/: address.cc  bytearray.cc  endian.h  endian.hpp  env.h  fd_manager.h  fiber.cc  fiber.h  hook.cc  iomanager.cc  iomanager.h  log.cpp  log.h  macro.h  mutex.cc  mutex.h  scheduler.cc  scheduler.h  socket.cc  socket.h  sylar.h  tcp_server.cc  tcp_server.h  thread.h  timer.h  uri.cc
sylar/rpc/: rpcapplication.cc  rpcapplication.h  rpcchannel.cc  rpcchannel.h  rpcconfig.cc  rpcconfig.h  rpccontroller.cc  rpccontroller.h  rpcheader.pb.cc  rpcheader.pb.h  rpcheader.proto  rpcprovider.cc  rpcprovider.h  zookeeperutil.cc  zookeeperutil.h
tests/: CMakeLists.txt  test_dopassure.cc  test_fiber_swap.cc  test_http_server.cc  test_log.cpp  test_tcp_server.cc  test_tcpserver_bench.cc  test_tcpserver_passure.cc  test_thread_swap.cc
tests/basic/: Makefile  main  main.cpp  readme.md  ucontext.cc  ucontext2.cc  uthread.cpp  uthread.h
tests/fiber/: CMakeLists.txt  simple_fiber_scheduler.cc
tests/rpc/: CMakeLists.txt  calluserservice.cc  user.pb.cc  user.pb.h  user.proto  userservice.cc
tests/server/: CMakeLists.txt  echoserver.cc  muduo-echoserver.cc  raw-echoserver.cc
